// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> Matches snapshot 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-1ampce4-1 YqugJ"
  >
    <div>
      <div
        class="CartCount__Dot-sc-1ampce4-0 jtRCi count"
      >
        11
      </div>
    </div>
  </span>
</div>
`;

exports[`<CartCount/> updates via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-1ampce4-1 YqugJ"
  >
    <div>
      <div
        class="CartCount__Dot-sc-1ampce4-0 jtRCi count count-enter-done"
      >
        12
      </div>
    </div>
  </span>
</div>
`;
